Overlapping issure fix

--- a/styles/base.css
+++ b/styles/base.css
@@ -13,22 +13,27 @@
     text-decoration: none;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+    box-sizing: border-box;
 }
 
 html {
     scroll-behavior: smooth;
     font-family: var(--main-font);
-}
-
-body {
-    width: 100vw;
-    background-color: black;
-    color: white;
     overflow-x: hidden;
 }
 
+body {
+    width: 100%;
+    max-width: 100vw;
+    background-color: black;
+    color: white;
+    overflow-x: hidden;
+    position: relative;
+}
+
 section {
-    width: 100vw;
+    width: 100%;
+    max-width: 100vw;
     min-height: 100vh;
     padding-top: var(--header-height);
     padding-bottom: 25px;
@@ -36,6 +41,7 @@ section {
     display: flex;
     align-items: center;
     justify-content: center;
+    overflow-x: hidden;
 }
 
 section:nth-child(odd) {
